tests/files/lexer_tests/should_fail/058.cmdr
// Illegal character in variable name (ascii 25)
myvar = 25;